Bug 207318 nsTreeBodyFrame needs to check rv of GetParentIndex r=varga sr=bryner